--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,12 +5,12 @@ build:
   tools:
     python: "3.10"
 
-python:
-  install:
-    - requirements: requirements.txt
-
 sphinx:
   configuration: source/conf.py
 
-# formats:
-#   - pdf
+formats:
+  - pdf
+
+python:
+  install:
+    - requirements: requirements.txt
